Add latest parameter to buildsArtifactGet.
This provides a function for only returning the latest build, rather
than all builds.
